--- a/app/public/css/basic.css
+++ b/app/public/css/basic.css
@@ -9,7 +9,7 @@ a{
 }
 
 header{
-    color: #FFFFFF;
+    color: hsl(0, 0%, 100%);
     background-color:#BDCC94;
     width: 100%;
     height: 60px;
